# UnitreeSimEnv

./: .gitignore  .gitmodules  README.md  build.sh
scripts/: download_b2_description.sh  download_gazebo_models.sh
src/b2_description/: CMakeLists.txt  README.md  package.ros1.xml  package.ros2.xml
src/b2_description/config/: config.rviz  robot_control.yaml  robot_control_ros2.yaml  robot_joint_controller_params.yaml
src/b2_description/launch/: display.launch  gazebo.launch
src/b2_description/meshes/: FL_calf.dae  FL_foot.dae  FL_hip.dae  FL_thigh.dae  FR_hip.dae  FR_thigh.dae  RL_hip.dae  RL_thigh.dae  RR_hip.dae  RR_thigh.dae
src/b2_description/mjcf/: b2.xml  scene.xml  scene_terrain.xml
src/b2_description/urdf/: b2_description.urdf
src/b2_description/xacro/: gazebo.xacro  lidar.xacro  properties.xacro  robot.xacro
src/b2_sim/: CMakeLists.txt  package.xml
src/b2_sim/launch/: gazebo.launch.py
src/b2_sim/scripts/: dog_odom_publisher.py  load_joint_state_broadcaster.py
src/b2_sim/worlds/: earth.world  stairs.world
src/robot_joint_controller/: CMakeLists.txt  package.ros1.xml  package.ros2.xml
src/robot_joint_controller/ros/: robot_joint_controller_plugins.xml
src/robot_joint_controller/ros2/: robot_joint_controller_plugins.xml
src/robot_msgs/: CMakeLists.txt  package.ros1.xml  package.ros2.xml  package.xml
src/robot_msgs/msg/: IMU.msg  MotorCommand.msg  MotorState.msg  RobotState.msg
src/velodyne_description/: CHANGELOG.rst  package.xml
src/velodyne_description/launch/: example.launch.py
src/velodyne_gazebo_plugins/: package.xml
(+20 files in other folders)
