<?xml version="1.0"?>
<package format="3">
  <name>b2_sim</name>
  <version>1.0.0</version>
  <description>Gazebo simulation environment for Unitree B2</description>
  <maintainer email="fanziqi614@gmail.com">Ziqi Fan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>b2_description</exec_depend>
  <exec_depend>robot_joint_controller</exec_depend>
  <exec_depend>robot_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>demo_nodes_cpp</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
